[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrono-decon"
version = "0.2.1"
description = "Chronological Deconvolution for Mass Spectrometry - Modified correlation algorithm for single component reconstruction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ChronoDecon Contributors"}
]
keywords = ["mass-spectrometry", "deconvolution", "analytical-chemistry", "mzml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pymzml>=2.5.0",
    "typer>=0.4.0",
    "fastmcp>=0.1.0",
    "plotly>=5.0.0",
    "streamlit>=1.20.0",
    "matchms>=0.20.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
raw = [
    "pyopenms>=2.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
chrono-decon = "chrono_decon.cli:main"

[project.urls]
Homepage = "https://github.com/TinaSong0590/ChronoDecon"
Documentation = "https://github.com/TinaSong0590/ChronoDecon#readme"
Repository = "https://github.com/TinaSong0590/ChronoDecon"
"Bug Tracker" = "https://github.com/TinaSong0590/ChronoDecon/issues"

[tool.setuptools.packages.find]
include = ["chrono_decon*"]

[tool.setuptools.package-data]
chrono_decon = ["bin/**/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
